# meshmerizer

./: .gitignore  README.md  REVIEWER_PROMPT.md  adaptive-plan.md  adaptive-refinement-work-queue-plan.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: deploy.yml  docs.yml  test.yml
docs/: architecture.md  cli-options.md  cli.md  index.md  installation.md  mesh-simplification-plan.md  project-completion-plan.md  python-api.md  release.md  structure-and-documentation-refactor-plan.md
docs/cli-options/: base-resolution.md  box-size.md  center.md  extent.md  filename.md  fof.md  index.md  isovalue.md  linking-factor.md  load-octree.md  max-depth.md  max-edge-ratio.md  max-qef-rms-residual-ratio.md  min-feature-thickness.md  min-fof-cluster-size.md  min-normal-alignment-threshold.md  min-usable-hermite-samples.md  no-periodic.md  no-wrap-shift.md  nthreads.md  output.md  particle-type.md  pre-thickening-radius.md  remove-islands-fraction.md  save-octree.md  shift.md  silent.md  simplify-factor.md  smoothing-factor.md  smoothing-iterations.md  smoothing-strength.md  surface-percentile.md  target-size.md  tight-bounds.md  visualise-verts.md  wrap-shift.md
src/meshmerizer/: __init__.py  _adaptive.cpp  _version.py  _voxelize.c  adaptive_core.py  api.py  chunking.py  cli.py  logging.py  logging_utils.py  mesh.py  poisson.py  printing.py  reconstruct.py  serialize.py  state.py  voxels.py
src/meshmerizer/adaptive/: __init__.py  _native.py  bindings.py  pipeline.py  topology.py  tree.py
src/meshmerizer/adaptive_cpp/: adaptive_solid.hpp  bounding_box.hpp  cancellation.hpp  dc_pipeline.hpp  edge_subdiv.hpp  faces.hpp  fof.hpp  hermite.hpp  kernel_wendland_c2.hpp  mesh.hpp  morton.hpp  octree_cell.hpp  omp_config.hpp  particle.hpp  particle_grid.hpp  poisson_basis.hpp  poisson_mc.hpp  poisson_pipeline.hpp  poisson_rhs.hpp  poisson_solver.hpp  poisson_stencil.hpp  progress_bar.hpp  qef.hpp  refinement_arena.hpp  refinement_closure.cpp  refinement_closure.hpp  refinement_context.cpp  refinement_context.hpp  refinement_work_queue.cpp  refinement_work_queue.hpp  vector3d.hpp  vertex_adjacency.hpp  vertex_smooth.hpp
src/meshmerizer/chunks/: __init__.py  assembly.py  geometry.py  hard.py  processing.py
src/meshmerizer/cli/: __init__.py  adaptive.py  args.py  diagnostics.py  main.py  particles.py  units.py
src/meshmerizer/commands/: __init__.py  adaptive_stl.py  args.py  loading.py  main.py  stl.py
src/meshmerizer/io/: __init__.py  octree.py  output.py  swift.py
src/meshmerizer/mesh/: __init__.py  core.py  extract.py  operations.py  volume.py
src/meshmerizer/voxels/: __init__.py  deposition.py  preprocess.py
tests/: test_adaptive_cli.py  test_adaptive_core.py  test_api.py  test_arena.py  test_chunking.py  test_integration.py  test_logging.py  test_meshmerizer.py  test_poisson.py  test_poisson_basis.py  test_poisson_mc.py  test_poisson_rhs.py  test_poisson_solver.py  test_poisson_stencil.py  test_reconstruct.py  test_serialize.py
